--- a/2_page/style/style.css
+++ b/2_page/style/style.css
@@ -1,21 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope&family=Playfair+Display&display=swap");
-body header .h-but button, body header .h-but, body header .conts, body header nav ul, body header .img {
+body footer .f-end, body main .about .img, body header .h-but button, body header .h-but, body header .conts, body header nav ul, body header .img, button {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
+button {
+  justify-content: center;
+  background-color: #5C8692;
+  font-size: calc(8pxpx + 6px * ((100vw - 320px) / 1120));
+  color: #FFFFFF;
+  border-color: #5C8692;
+}
+button div {
+  padding: 3%;
+}
+
+button:hover {
+  background-color: #286474;
+}
+
 body {
   font-family: "Manrope", sans-serif;
-  height: 8311px;
+  height: 3151px;
   max-width: 1440px;
   margin: 0 auto;
   display: grid;
-  grid-template: 1.25% 10% 1fr/100%;
+  grid-template: 3.3% 1fr 18.89%/100%;
 }
 body header {
   grid-area: 1/1/2/2;
-  background-color: #c20000;
+  background-color: #FFFFFF;
   display: grid;
   grid-template: 100%/17.5% 16.5% 1fr 31.5% 6.5% 18%;
   justify-content: center;
@@ -29,18 +44,27 @@ body header .phone {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1em;
+  font-size: calc(8pxpx + 8px * ((100vw - 320px) / 1120));
 }
 body header nav {
   grid-area: 1/4/2/5;
 }
+body header nav ul {
+  text-decoration: none;
+}
 body header nav ul li {
   list-style-type: none;
-  text-decoration: none;
 }
 body header nav ul li a {
   text-decoration: none;
   color: #141414;
+  font-size: calc(8pxpx + 9px * ((100vw - 320px) / 1120));
+}
+body header nav ul li a:hover {
+  color: #286474;
+}
+body header nav ul .this {
+  color: #5C8692;
 }
 body header .conts {
   grid-area: 1/5/2/6;
@@ -54,7 +78,7 @@ body header .h-but {
 body header .h-but button {
   justify-content: center;
   background-color: #5C8692;
-  font-size: 0.875em;
+  font-size: calc(8pxpx + 6px * ((100vw - 320px) / 1120));
   height: 60%;
   color: #FFFFFF;
   width: 77%;
@@ -62,4 +86,199 @@ body header .h-but button {
 }
 body header .h-but button div {
   padding: 3%;
+}
+body main {
+  display: grid;
+  background-color: #d59292;
+  grid-template: 36.15% 29.8% 1fr/100%;
+}
+body main .about {
+  background-color: #EBF3F5;
+  display: grid;
+  grid-template: 100%/42% 58%;
+}
+body main .about .aboutus {
+  display: grid;
+  grid-template: 28% 25% 15% 1fr/100%;
+  padding-left: 19.75%;
+}
+body main .about .aboutus .welcome {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  color: #5C8692;
+  width: 100%;
+  height: 100%;
+}
+body main .about .aboutus .welcome img {
+  height: 10%;
+  margin-right: 2%;
+}
+body main .about .aboutus h1 {
+  margin: 0;
+  margin-top: 0.9%;
+  padding: 0;
+  font-family: "Playfair Display", serif;
+  font-size: calc(35px + 20 * ((100vw - 320px) / 1120));
+  line-height: 127%;
+  letter-spacing: -5%;
+}
+body main .about .aboutus .welcome-p {
+  font-size: calc(15px + 4 * ((100vw - 320px) / 1120));
+  color: #555555;
+  line-height: 155%;
+  letter-spacing: -10%;
+}
+body main .about .aboutus button {
+  height: 20%;
+  width: 50%;
+}
+body main .about .img {
+  width: 100%;
+}
+body main .about .img img {
+  width: 70%;
+  padding-top: 1%;
+  padding-right: 12%;
+}
+body main .services {
+  background-color: #FFFFFF;
+  display: grid;
+  grid-template: 100%/repeat(3, 1fr);
+  align-items: center;
+  padding: 0 8.2%;
+  gap: 2.3%;
+}
+body main .services div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 100%;
+}
+body main .services div .img {
+  margin-top: 25.5%;
+  width: 100%;
+  height: 40%;
+}
+body main .services div .img img {
+  width: 100%;
+}
+body main .services div h3 {
+  font-size: calc(20px + 6 * ((100vw - 320px) / 1120));
+  color: #141414;
+  margin: 0;
+  padding: 4% 0 1.5% 0;
+  font-family: "Playfair Display", serif;
+}
+body main .services div p {
+  color: #555555;
+  font-size: calc(14px + 4 * ((100vw - 320px) / 1120));
+  line-height: 150%;
+}
+body main .services div button {
+  height: 8%;
+  width: 42%;
+  color: #141414;
+  background-color: #FFFFFF;
+  font-size: calc(8px + 5 * ((100vw - 320px) / 1120));
+}
+body main .take-care {
+  background-color: #EBF3F5;
+  display: grid;
+  grid-template: 100%/repeat(2, 1fr);
+}
+body main .take-care .take-care-1 {
+  display: grid;
+  grid-template: 21% 19.5% 20% 1fr/100%;
+  padding-left: 17%;
+}
+body main .take-care .take-care-1 .att {
+  font-size: calc(8px + 7 * ((100vw - 320px) / 1120));
+  color: #141414;
+  font-family: #5C8692;
+  display: flex;
+  align-self: flex-end;
+}
+body main .take-care .take-care-1 h2 {
+  font-size: calc(35px + 10 * ((100vw - 320px) / 1120));
+  color: #141414;
+  font-family: "Playfair Display", serif;
+  margin: 0;
+  padding: 0;
+}
+body main .take-care .take-care-1 .att-p {
+  font-size: calc(14px + 4 * ((100vw - 320px) / 1120));
+  color: #555555;
+  line-height: 155%;
+  letter-spacing: -10%;
+}
+body main .take-care .take-care-1 .tools {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 2%;
+}
+body main .take-care .take-care-1 .tools .tool {
+  background-color: #FFFFFF;
+  height: 56%;
+  width: 31.5%;
+  border: 2px bold #5C8692;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body main .take-care .take-care-1 .tools .tool p {
+  color: #141414;
+  font-family: "Playfair Display", serif;
+  font-size: calc(15px + 7 * ((100vw - 320px) / 1120));
+}
+body main .take-care .img .img-1 {
+  position: absolute;
+  margin-top: 7%;
+  margin-left: 7%;
+}
+body main .take-care .img .img-2 {
+  position: relative;
+  z-index: 1;
+  margin-top: 17.5%;
+  margin-left: 7%;
+}
+body footer {
+  background-color: #1E2C30;
+  display: grid;
+  grid-template: 35% 1fr 10%/100%;
+  padding: 0 8.25%;
+}
+body footer .first-f {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+body footer .first-f ul {
+  width: 21%;
+  display: flex;
+  justify-content: space-around;
+}
+body footer .first-f ul li {
+  display: flex;
+  list-style-type: none;
+}
+body footer .menegment {
+  display: flex;
+  justify-content: space-between;
+}
+body footer .menegment h4 {
+  text-decoration: none;
+  font-size: calc(15px + 7 * ((100vw - 320px) / 1120));
+  color: #FFFFFF;
+  font-family: "Playfair Display", serif;
+}
+body footer .menegment td, body footer .menegment p {
+  font-size: calc(14px + 3 * ((100vw - 320px) / 1120));
+  color: #FFFFFF;
+  line-height: 150%;
+}
+body footer .f-end {
+  color: #FFFFFF;
+  font-size: calc(10px + 5 * ((100vw - 320px) / 1120));
 }/*# sourceMappingURL=style.css.map */
