--- a/2_page/style/style.scss
+++ b/2_page/style/style.scss
@@ -11,20 +11,45 @@ $colorf2: #555555;
 $colorfbut: #5C8692;
 $colorbcans:#1E2C30;
 $colorhover:#286474;
+$colorfooter1: #1E2C30;
+$colorfooter2: #111E22;
+
+$maxWidth: 1440;
+
+@mixin adaptiv-font($pcSize, $mobSize) {
+	$addSize: $pcSize - $mobSize;
+	$maxWidth: $maxWidth - 320;
+	font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
+}
+
 %flex-element-center {
     display: flex;
     justify-content: space-around;
     align-items: center;
   }
-  
+button {
+                @extend %flex-element-center;
+                justify-content: center;
+                background-color: $colorfbut;
+                @include adaptiv-font(14px, 8px);
+                color: $colorpage1;
+                border-color: $colorfbut;
+                div{
+                    padding: 3%;
+                }
+                
+            }
+button:hover {
+                    background-color: $colorhover;
+                }
 
 body {
     font-family: $font1;
-    height: 8311px;
+    height: 3151px;
     max-width: 1440px;
     margin: 0 auto;
     display: grid;
-    grid-template: 1.25% 10% 1fr/ 100% ;
+    grid-template: 3.3% 1fr 18.89%/ 100% ;
     header {
         grid-area: 1/1/2/2;
         background-color: $colorpage1;
@@ -41,8 +66,9 @@ body {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-size: 1em;
+            @include adaptiv-font(16px, 8px);
         }
+
         nav {
             grid-area: 1/4/2/5;
             ul{
@@ -52,17 +78,18 @@ body {
                 a {
                     text-decoration: none;
                     color: $colorf1;
-                    font-size: 1.0625em;
-                    .this {
-                        color: $colorfbut;
-                        this:hover {
+                    @include adaptiv-font(17px, 8px);
+                    &:hover {
                             color: $colorhover;
-                            font-size: calc(1.0625em+1%);
                         }
-                    }
                 }
-                text-decoration: none;
+                
             }
+            .this {
+                    color: $colorfbut;
+                    }
+                    
+                text-decoration: none;
         }}
         .conts {
             grid-area: 1/5/2/6;
@@ -78,7 +105,7 @@ body {
                 @extend %flex-element-center;
                 justify-content: center;
                 background-color: $colorfbut;
-                font-size: 0.875em;
+                @include adaptiv-font(14px, 8px);
                 height: 60%;
                 color: $colorpage1;
                 width: 77%;
@@ -86,10 +113,217 @@ body {
                 div{
                     padding: 3%;
                 }
-                button:hover {
-                    color: $colorhover;
+                
+            }
+            
+        }
+    }
+    main {
+        display: grid;
+        background-color: #d59292;
+        grid-template: 36.15% 29.8% 1fr / 100%;
+        .about {
+            background-color: $colorpage2;
+            display: grid;
+            grid-template: 100% / 42% 58%;
+            
+            .aboutus {
+                display: grid;
+                grid-template:  28% 25% 15% 1fr /100%;
+                padding-left: 19.75%;
+                .welcome {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: flex-end;
+                    color: $colorfbut;
+                    width: 100%;
+                    height: 100%;
+                    img {
+                        height: 10%;
+                        margin-right: 2%;
+                    }
+                }
+                h1 {
+                    margin: 0;
+                    margin-top: 0.9%;
+                    padding: 0;
+                    font-family: $font2;
+                    @include adaptiv-font(55, 35);
+                    line-height: 127%;
+                    letter-spacing: -5%;
+                }
+                .welcome-p {                    
+                    @include adaptiv-font(19, 15);
+                    color: $colorf2;
+                    line-height: 155%;
+                    letter-spacing: -10%;
+                }
+                button {
+                    height: 20%;
+                    width: 50%;
+                }
+
+            }
+            .img {
+                @extend %flex-element-center;
+                width: 100%;
+                img {
+                    width: 70%;
+                    padding-top: 1%;
+                    padding-right: 12%;
                 }
             }
+        }
+
+
+        .services {
+            background-color: $colorpage1;
+            display: grid;
+            grid-template: 100% / repeat(3, 1fr);
+            align-items: center;
+            padding: 0 8.2%;
+            gap: 2.3%;
+            div {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                height: 100%;
+                .img {
+                    margin-top: 25.5%;
+                    width: 100%;
+                    height: 40%;
+                    img {
+                        width: 100%;
+                    }
+                }
+                h3 {
+                    @include adaptiv-font(26, 20);
+                    color: $colorf1;
+                    margin: 0;
+                    padding: 4% 0 1.5% 0;
+                    font-family: $font2;
+                }
+                p {
+                    color: $colorf2;
+                    @include adaptiv-font(18, 14);
+                    line-height: 150%;
+                }
+                button {
+                    height: 8%;
+                    width: 42%;
+                    color: $colorf1;
+                    background-color: $colorpage1;
+                    @include adaptiv-font(13, 8);
+                }
+            }
+        }
+        
+        .take-care {
+            background-color: $colorpage2;
+            display: grid;
+            grid-template: 100% / repeat(2, 1fr);
+            .take-care-1 {
+                display: grid;
+                grid-template: 21% 19.5% 20% 1fr / 100%;
+                padding-left: 17%;
+                .att {
+                    @include adaptiv-font(15, 8);
+                    color: $colorf1;
+                    font-family: $colorfbut;
+                    display: flex;
+                    align-self: flex-end
+                }
+                h2 {
+                    @include adaptiv-font(45, 35);
+                    color: $colorf1;
+                    font-family: $font2;
+                    margin: 0;
+                    padding: 0;
+                }
+                .att-p {
+                    @include adaptiv-font(18, 14);
+                    color: $colorf2;
+                    line-height: 155%;
+                    letter-spacing: -10%;
+                }
+
+                .tools {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-right: 2%;
+                    .tool {
+                        background-color: $colorpage1;
+                        height: 56%;
+                        width: 31.5%;
+                        border: 2px bold $colorfbut;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        p {
+                            color: $colorf1;
+                            font-family: $font2;
+                            @include adaptiv-font(22, 15);
+                        }
+                    }
+                }
+            }
+
+            .img {
+                .img-1 {
+                    position: absolute;
+                    margin-top: 7%;
+                    margin-left: 7%;
+                }
+                .img-2 {
+                    position: relative;
+                    z-index: 1; 
+                    margin-top: 17.5%;
+                    margin-left: 7%;
+                }
+            }
+        }
+    }
+
+
+    footer {
+        background-color: $colorfooter1;
+        display: grid;
+        grid-template: 35% 1fr 10% / 100%;
+        padding: 0 8.25%;
+        .first-f {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+                ul {
+                    width: 21%;
+                    display: flex;
+                    justify-content: space-around;
+                    li {
+                        display: flex;
+                        list-style-type: none;
+                    }
+                }
+        }
+        .menegment {
+            display: flex;
+            justify-content: space-between;
+            h4 {
+                    text-decoration: none;
+                    @include adaptiv-font(22, 15);
+                    color: $colorpage1;
+                    font-family: $font2;
+            }
+            td, p{
+                    @include adaptiv-font(17, 14);
+                    color: $colorpage1;
+                    line-height: 150%;
+            }
+        }
+        .f-end {
+            @extend  %flex-element-center;
+            color: $colorpage1;
+            @include adaptiv-font(15, 10);
         }
     }
 }
