--- a/2_page/style/style.scss
+++ b/2_page/style/style.scss
@@ -43,9 +43,11 @@ button:hover {
                     background-color: $colorhover;
                 }
 
+
+
 body {
     font-family: $font1;
-    height: 3151px;
+    min-height: 3151px;
     max-width: 1440px;
     margin: 0 auto;
     display: grid;
@@ -78,7 +80,7 @@ body {
                 a {
                     text-decoration: none;
                     color: $colorf1;
-                    @include adaptiv-font(17px, 8px);
+                    @include adaptiv-font(17px, 4px);
                     &:hover {
                             color: $colorhover;
                         }
@@ -91,6 +93,7 @@ body {
                     
                 text-decoration: none;
         }}
+        
         .conts {
             grid-area: 1/5/2/6;
             @extend %flex-element-center;  
@@ -105,7 +108,7 @@ body {
                 @extend %flex-element-center;
                 justify-content: center;
                 background-color: $colorfbut;
-                @include adaptiv-font(14px, 8px);
+                @include adaptiv-font(14px, 3px);
                 height: 60%;
                 color: $colorpage1;
                 width: 77%;
@@ -116,6 +119,16 @@ body {
                 
             }
             
+        }
+    }
+    @media screen and (max-width: 700px) {
+    
+        header {
+            display: grid;
+            grid-template: 100% / 50% 1fr 1fr 1fr 1fr 45%;
+            nav, .phone, .conts {
+            display: none;
+        }
         }
     }
     main {
@@ -148,12 +161,12 @@ body {
                     margin-top: 0.9%;
                     padding: 0;
                     font-family: $font2;
-                    @include adaptiv-font(55, 35);
+                    @include adaptiv-font(55, 24);
                     line-height: 127%;
                     letter-spacing: -5%;
                 }
                 .welcome-p {                    
-                    @include adaptiv-font(19, 15);
+                    @include adaptiv-font(19, 9);
                     color: $colorf2;
                     line-height: 155%;
                     letter-spacing: -10%;
@@ -161,6 +174,11 @@ body {
                 button {
                     height: 20%;
                     width: 50%;
+                }
+                @media screen and (max-width: 700px) {
+                    button {
+                        width: 100%;
+                    }
                 }
 
             }
@@ -179,7 +197,7 @@ body {
         .services {
             background-color: $colorpage1;
             display: grid;
-            grid-template: 100% / repeat(3, 1fr);
+            grid-template: 100% / repeat(auto-fit, minmax(250px, 1fr));
             align-items: center;
             padding: 0 8.2%;
             gap: 2.3%;
@@ -197,7 +215,7 @@ body {
                     }
                 }
                 h3 {
-                    @include adaptiv-font(26, 20);
+                    @include adaptiv-font(26, 14);
                     color: $colorf1;
                     margin: 0;
                     padding: 4% 0 1.5% 0;
@@ -215,17 +233,28 @@ body {
                     background-color: $colorpage1;
                     @include adaptiv-font(13, 8);
                 }
+
+                @media screen and (max-width: 700px) {
+                    
+                    button {
+                        width: 100%;
+                    }
+                }
             }
+
         }
-        
+
+                  
+            
         .take-care {
             background-color: $colorpage2;
-            display: grid;
-            grid-template: 100% / repeat(2, 1fr);
+            display: flex;
+            justify-content: space-between;
             .take-care-1 {
+                width: 40%;
                 display: grid;
                 grid-template: 21% 19.5% 20% 1fr / 100%;
-                padding-left: 17%;
+                padding-left: 8.5%;
                 .att {
                     @include adaptiv-font(15, 8);
                     color: $colorf1;
@@ -234,7 +263,7 @@ body {
                     align-self: flex-end
                 }
                 h2 {
-                    @include adaptiv-font(45, 35);
+                    @include adaptiv-font(45, 24);
                     color: $colorf1;
                     font-family: $font2;
                     margin: 0;
@@ -263,23 +292,28 @@ body {
                         p {
                             color: $colorf1;
                             font-family: $font2;
-                            @include adaptiv-font(22, 15);
+                            @include adaptiv-font(22, 10);
                         }
                     }
                 }
             }
 
+            @media screen and (max-width: 700px) {
+            .tools, .att-p {
+                width: 200%;
+
+            }   
+               
+            }
+
             .img {
-                .img-1 {
-                    position: absolute;
-                    margin-top: 7%;
-                    margin-left: 7%;
-                }
-                .img-2 {
+                width: 42%;
+                img {
                     position: relative;
                     z-index: 1; 
-                    margin-top: 17.5%;
-                    margin-left: 7%;
+                    width: 100%;
+                    max-width: 500px;
+                    top: 10.5%;
                 }
             }
         }
@@ -310,12 +344,12 @@ body {
             justify-content: space-between;
             h4 {
                     text-decoration: none;
-                    @include adaptiv-font(22, 15);
+                    @include adaptiv-font(22, 8);
                     color: $colorpage1;
                     font-family: $font2;
             }
             td, p{
-                    @include adaptiv-font(17, 14);
+                    @include adaptiv-font(17, 8);
                     color: $colorpage1;
                     line-height: 150%;
             }
@@ -323,7 +357,19 @@ body {
         .f-end {
             @extend  %flex-element-center;
             color: $colorpage1;
-            @include adaptiv-font(15, 10);
+            @include adaptiv-font(15, 8);
         }
     }
+}
+@media screen and (max-width: 700px) {
+
+    footer {
+    .first-f {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+            img {
+                width: 50%;
+            }
+    }}
 }
